cleaned scaffolding and added some viewage

--- a/app/views/address_uses/edit.html.erb
+++ b/app/views/address_uses/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @address_use %> |
-<%= link_to 'Back', address_uses_path %>
+<%= link_to 'address_uses', address_uses_path %>
+<%= link_to_backup %>
