--- a/app/views/address_uses/new.html.erb
+++ b/app/views/address_uses/new.html.erb
@@ -20,4 +20,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', address_uses_path %>
+<%= link_to 'address_uses', address_uses_path %>
+<%= link_to_backup %>
