--- a/app/views/address_uses/show.html.erb
+++ b/app/views/address_uses/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_address_use_path(@address_use) %> |
-<%= link_to 'Back', address_uses_path %>
+<%= link_to 'address_uses', address_uses_path %>
+<%= link_to_backup %>
