--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -53,4 +53,5 @@
 <% end %>
 
 <%= link_to 'show', @address %> |
-<%= link_to 'Back', addresses_path %>
+<%= link_to 'addresses', addresses_path %>
+<%= link_to_backup %>
