--- a/app/views/brands/edit.html.erb
+++ b/app/views/brands/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @brand %> |
-<%= link_to 'Back', brands_path %>
+<%= link_to 'brands', brands_path %>
+<%= link_to_backup %>
