--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_city_path(@city) %> |
-<%= link_to 'Back', cities_path %>
+<%= link_to 'cities', cities_path %>
+<%= link_to_backup %>
