--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -29,4 +29,5 @@
 <% end %>
 
 <%= link_to 'show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'comments', comments_path %>
+<%= link_to_backup %>
