--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -25,4 +25,5 @@
 
 
 <%= link_to 'edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'comments', comments_path %>
+<%= link_to_backup %>
