--- a/app/views/credit_cards/edit.html.erb
+++ b/app/views/credit_cards/edit.html.erb
@@ -33,4 +33,5 @@
 <% end %>
 
 <%= link_to 'show', @credit_card %> |
-<%= link_to 'Back', credit_cards_path %>
+<%= link_to 'credit_cards', credit_cards_path %>
+<%= link_to_backup %>
