--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -32,4 +32,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', credit_cards_path %>
+<%= link_to 'credit_cards', credit_cards_path %>
+<%= link_to_backup %>
