--- a/app/views/credit_cards/show.html.erb
+++ b/app/views/credit_cards/show.html.erb
@@ -30,4 +30,5 @@
 
 
 <%= link_to 'edit', edit_credit_card_path(@credit_card) %> |
-<%= link_to 'Back', credit_cards_path %>
+<%= link_to 'credit_cards', credit_cards_path %>
+<%= link_to_backup %>
