--- a/app/views/followings/edit.html.erb
+++ b/app/views/followings/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @following %> |
-<%= link_to 'Back', followings_path %>
+<%= link_to 'followings', followings_path %>
+<%= link_to_backup %>
