--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @group %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'groups', groups_path %>
+<%= link_to_backup %>
