--- a/app/views/image_uses/edit.html.erb
+++ b/app/views/image_uses/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @image_use %> |
-<%= link_to 'Back', image_uses_path %>
+<%= link_to 'image_uses', image_uses_path %>
+<%= link_to_backup %>
