--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -37,4 +37,5 @@
 <% end %>
 
 <%= link_to 'show', @image %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'images', images_path %>
+<%= link_to_backup %>
