--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -35,4 +35,5 @@
 
 
 <%= link_to 'edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'images', images_path %>
+<%= link_to_backup %>
