--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -33,4 +33,5 @@
 <% end %>
 
 <%= link_to 'show', @listing %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'listings', listings_path %>
+<%= link_to_backup %>
