--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -30,4 +30,5 @@
 
 
 <%= link_to 'edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'listings', listings_path %>
+<%= link_to_backup %>
