--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -25,4 +25,5 @@
 <% end %>
 
 <%= link_to 'show', @location %> |
-<%= link_to 'Back', locations_path %>
+<%= link_to 'locations', locations_path %>
+<%= link_to_backup %>
