--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -16,4 +16,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'memberships', memberships_path %>
+<%= link_to_backup %>
