--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_membership_path(@membership) %> |
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'memberships', memberships_path %>
+<%= link_to_backup %>
