--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -25,4 +25,5 @@
 <% end %>
 
 <%= link_to 'show', @message %> |
-<%= link_to 'Back', messages_path %>
+<%= link_to 'messages', messages_path %>
+<%= link_to_backup %>
