--- a/app/views/network_memberships/new.html.erb
+++ b/app/views/network_memberships/new.html.erb
@@ -16,4 +16,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', network_memberships_path %>
+<%= link_to 'network_memberships', network_memberships_path %>
+<%= link_to_backup %>
