--- a/app/views/network_memberships/show.html.erb
+++ b/app/views/network_memberships/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_network_membership_path(@network_membership) %> |
-<%= link_to 'Back', network_memberships_path %>
+<%= link_to 'network_memberships', network_memberships_path %>
+<%= link_to_backup %>
