--- a/app/views/networks/edit.html.erb
+++ b/app/views/networks/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @network %> |
-<%= link_to 'Back', networks_path %>
+<%= link_to 'networks', networks_path %>
+<%= link_to_backup %>
