--- a/app/views/networks/show.html.erb
+++ b/app/views/networks/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_network_path(@network) %> |
-<%= link_to 'Back', networks_path %>
+<%= link_to 'networks', networks_path %>
+<%= link_to_backup %>
