--- a/app/views/offerings/edit.html.erb
+++ b/app/views/offerings/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @offering %> |
-<%= link_to 'Back', offerings_path %>
+<%= link_to 'offerings', offerings_path %>
+<%= link_to_backup %>
