--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_offering_path(@offering) %> |
-<%= link_to 'Back', offerings_path %>
+<%= link_to 'offerings', offerings_path %>
+<%= link_to_backup %>
