--- a/app/views/prices/edit.html.erb
+++ b/app/views/prices/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @price %> |
-<%= link_to 'Back', prices_path %>
+<%= link_to 'prices', prices_path %>
+<%= link_to_backup %>
