--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'products', products_path %>
+<%= link_to_backup %>
