--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'products', products_path %>
+<%= link_to_backup %>
