--- a/app/views/purchases/edit.html.erb
+++ b/app/views/purchases/edit.html.erb
@@ -33,4 +33,5 @@
 <% end %>
 
 <%= link_to 'show', @purchase %> |
-<%= link_to 'Back', purchases_path %>
+<%= link_to 'purchases', purchases_path %>
+<%= link_to_backup %>
