--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -30,4 +30,5 @@
 
 
 <%= link_to 'edit', edit_purchase_path(@purchase) %> |
-<%= link_to 'Back', purchases_path %>
+<%= link_to 'purchases', purchases_path %>
+<%= link_to_backup %>
