--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -69,4 +69,5 @@
 <% end %>
 
 <%= link_to 'show', @schedule %> |
-<%= link_to 'Back', schedules_path %>
+<%= link_to 'schedules', schedules_path %>
+<%= link_to_backup %>
