--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -75,4 +75,5 @@
 
 
 <%= link_to 'edit', edit_schedule_path(@schedule) %> |
-<%= link_to 'Back', schedules_path %>
+<%= link_to 'schedules', schedules_path %>
+<%= link_to_backup %>
