--- a/app/views/states/edit.html.erb
+++ b/app/views/states/edit.html.erb
@@ -13,4 +13,5 @@
 <% end %>
 
 <%= link_to 'show', @state %> |
-<%= link_to 'Back', states_path %>
+<%= link_to 'states', states_path %>
+<%= link_to_backup %>
