--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -5,4 +5,5 @@
 
 
 <%= link_to 'edit', edit_state_path(@state) %> |
-<%= link_to 'Back', states_path %>
+<%= link_to 'states', states_path %>
+<%= link_to_backup %>
