--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @store %> |
-<%= link_to 'Back', stores_path %>
+<%= link_to 'stores', stores_path %>
+<%= link_to_backup %>
