--- a/app/views/taggings/edit.html.erb
+++ b/app/views/taggings/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @tagging %> |
-<%= link_to 'Back', taggings_path %>
+<%= link_to 'taggings', taggings_path %>
+<%= link_to_backup %>
