--- a/app/views/taggings/show.html.erb
+++ b/app/views/taggings/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_tagging_path(@tagging) %> |
-<%= link_to 'Back', taggings_path %>
+<%= link_to 'taggings', taggings_path %>
+<%= link_to_backup %>
