--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -13,4 +13,5 @@
 <% end %>
 
 <%= link_to 'show', @tag %> |
-<%= link_to 'Back', tags_path %>
+<%= link_to 'tags', tags_path %>
+<%= link_to_backup %>
