--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -5,4 +5,5 @@
 
 
 <%= link_to 'edit', edit_tag_path(@tag) %> |
-<%= link_to 'Back', tags_path %>
+<%= link_to 'tags', tags_path %>
+<%= link_to_backup %>
