--- a/app/views/website_uses/edit.html.erb
+++ b/app/views/website_uses/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @website_use %> |
-<%= link_to 'Back', website_uses_path %>
+<%= link_to 'website_uses', website_uses_path %>
+<%= link_to_backup %>
