--- a/app/views/website_uses/new.html.erb
+++ b/app/views/website_uses/new.html.erb
@@ -20,4 +20,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', website_uses_path %>
+<%= link_to 'website_uses', website_uses_path %>
+<%= link_to_backup %>
