--- a/app/views/website_uses/show.html.erb
+++ b/app/views/website_uses/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_website_use_path(@website_use) %> |
-<%= link_to 'Back', website_uses_path %>
+<%= link_to 'website_uses', website_uses_path %>
+<%= link_to_backup %>
