--- a/app/views/websites/edit.html.erb
+++ b/app/views/websites/edit.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 
 <%= link_to 'show', @website %> |
-<%= link_to 'Back', websites_path %>
+<%= link_to 'websites', websites_path %>
+<%= link_to_backup %>
