--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_website_path(@website) %> |
-<%= link_to 'Back', websites_path %>
+<%= link_to 'websites', websites_path %>
+<%= link_to_backup %>
