--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_brand_path(@brand) %> |
-<%= link_to 'Back', brands_path %>
+<%= link_to 'brands', brands_path %>
+<%= link_to_backup %>
