--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @city %> |
-<%= link_to 'Back', cities_path %>
+<%= link_to 'cities', cities_path %>
+<%= link_to_backup %>
