--- a/app/views/followings/show.html.erb
+++ b/app/views/followings/show.html.erb
@@ -10,4 +10,5 @@
 
 
 <%= link_to 'edit', edit_following_path(@following) %> |
-<%= link_to 'Back', followings_path %>
+<%= link_to 'followings', followings_path %>
+<%= link_to_backup %>
