--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'groups', groups_path %>
+<%= link_to_backup %>
