--- a/app/views/image_uses/show.html.erb
+++ b/app/views/image_uses/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_image_use_path(@image_use) %> |
-<%= link_to 'Back', image_uses_path %>
+<%= link_to 'image_uses', image_uses_path %>
+<%= link_to_backup %>
