--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <html>
   <head>
-    
+    <%= stylesheet_link_tag :all %>
   </head>
   <body>
-    <%= profile_link if logged_in? %>
+    <%= profile_link if logged_in? %><br>
     <% %w[address_uses addresses brands cities comments credit_cards followings groups image_uses images listings locations memberships messages network_memberships networks offerings prices products purchases schedules states stores taggings tags users website_uses website].each do |resource| %>
-      <%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %>|
+      [<%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %>]
     <% end %>
     <%= yield %>
   </body>
