--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @membership %> |
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'memberships', memberships_path %>
+<%= link_to_backup %>
