--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -20,4 +20,5 @@
 
 
 <%= link_to 'edit', edit_message_path(@message) %> |
-<%= link_to 'Back', messages_path %>
+<%= link_to 'messages', messages_path %>
+<%= link_to_backup %>
