--- a/app/views/network_memberships/edit.html.erb
+++ b/app/views/network_memberships/edit.html.erb
@@ -17,4 +17,5 @@
 <% end %>
 
 <%= link_to 'show', @network_membership %> |
-<%= link_to 'Back', network_memberships_path %>
+<%= link_to 'network_memberships', network_memberships_path %>
+<%= link_to_backup %>
