--- a/app/views/prices/show.html.erb
+++ b/app/views/prices/show.html.erb
@@ -15,4 +15,5 @@
 
 
 <%= link_to 'edit', edit_price_path(@price) %> |
-<%= link_to 'Back', prices_path %>
+<%= link_to 'prices', prices_path %>
+<%= link_to_backup %>
