--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -21,21 +21,7 @@
 
 <% for schedule in @schedules %>
   <tr>
-    <td><%=h schedule.sunday_open %></td>
-    <td><%=h schedule.sunday_close %></td>
-    <td><%=h schedule.monday_open %></td>
-    <td><%=h schedule.monday_close %></td>
-    <td><%=h schedule.tuesday_open %></td>
-    <td><%=h schedule.tuesday_close %></td>
-    <td><%=h schedule.wednesday_open %></td>
-    <td><%=h schedule.wednesday_close %></td>
-    <td><%=h schedule.thursday_open %></td>
-    <td><%=h schedule.thursday_close %></td>
-    <td><%=h schedule.friday_open %></td>
-    <td><%=h schedule.friday_close %></td>
-    <td><%=h schedule.saturday_open %></td>
-    <td><%=h schedule.saturday_close %></td>
-    <td><%=h schedule.holidays %></td>
+    <%= schedule_view schedule%>
     <td><%= link_to 'show', schedule %></td>
     <td><%= link_to 'edit', edit_schedule_path(schedule) %></td>
     <td><%= link_to 'Destroy', schedule, :confirm => 'Are you sure?', :method => :delete %></td>
