--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,38 +1,7 @@
-<p>
-  <b>Size:</b>
-  <%=h @image.size %>
-</p>
-
-<p>
-  <b>Content type:</b>
-  <%=h @image.content_type %>
-</p>
-
-<p>
-  <b>Filename:</b>
-  <%=h @image.filename %>
-</p>
-
-<p>
-  <b>Height:</b>
-  <%=h @image.height %>
-</p>
-
-<p>
-  <b>Width:</b>
-  <%=h @image.width %>
-</p>
-
-<p>
-  <b>Parent:</b>
-  <%=h @image.parent_id %>
-</p>
-
-<p>
-  <b>Thumbnail:</b>
-  <%=h @image.thumbnail %>
-</p>
-
+  <%= img_tag @image.public_filename %>
+  <%=h @image.filename %>: 
+  <%=h @image.height %>x
+  <%=h @image.width %><br>
 
 <%= link_to 'edit', edit_image_path(@image) %> |
 <%= link_to 'images', images_path %>
