--- a/app/views/prices/show.html.erb
+++ b/app/views/prices/show.html.erb
@@ -1,18 +1,7 @@
-<p>
-  <b>Offering:</b>
-  <%=h @price.offering_id %>
-</p>
-
-<p>
-  <b>Sale:</b>
-  <%=h @price.sale %>
-</p>
-
-<p>
-  <b>End date:</b>
-  <%=h @price.end_date %>
-</p>
-
+  <%= link_to_name @price.offering %> for
+  <%= @price.point %>
+  <%= '[sale]' if @price.sale %>
+valid until <%= time_ago_in_words @price.end_date %><br>
 
 <%= link_to 'edit', edit_price_path(@price) %> |
 <%= link_to 'prices', prices_path %>
