--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,78 +1,5 @@
-<p>
-  <b>Sunday open:</b>
-  <%=h @schedule.sunday_open %>
-</p>
-
-<p>
-  <b>Sunday close:</b>
-  <%=h @schedule.sunday_close %>
-</p>
-
-<p>
-  <b>Monday open:</b>
-  <%=h @schedule.monday_open %>
-</p>
-
-<p>
-  <b>Monday close:</b>
-  <%=h @schedule.monday_close %>
-</p>
-
-<p>
-  <b>Tuesday open:</b>
-  <%=h @schedule.tuesday_open %>
-</p>
-
-<p>
-  <b>Tuesday close:</b>
-  <%=h @schedule.tuesday_close %>
-</p>
-
-<p>
-  <b>Wednesday open:</b>
-  <%=h @schedule.wednesday_open %>
-</p>
-
-<p>
-  <b>Wednesday close:</b>
-  <%=h @schedule.wednesday_close %>
-</p>
-
-<p>
-  <b>Thursday open:</b>
-  <%=h @schedule.thursday_open %>
-</p>
-
-<p>
-  <b>Thursday close:</b>
-  <%=h @schedule.thursday_close %>
-</p>
-
-<p>
-  <b>Friday open:</b>
-  <%=h @schedule.friday_open %>
-</p>
-
-<p>
-  <b>Friday close:</b>
-  <%=h @schedule.friday_close %>
-</p>
-
-<p>
-  <b>Saturday open:</b>
-  <%=h @schedule.saturday_open %>
-</p>
-
-<p>
-  <b>Saturday close:</b>
-  <%=h @schedule.saturday_close %>
-</p>
-
-<p>
-  <b>Holidays:</b>
-  <%=h @schedule.holidays %>
-</p>
-
+<%= schedule_display @schedule %><br>
+<%= 'open on holidays' if @schedule.holidays %><br>
 
 <%= link_to 'edit', edit_schedule_path(@schedule) %> |
 <%= link_to 'schedules', schedules_path %>
