--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,8 +1,4 @@
-<p>
-  <b>Name:</b>
-  <%=h @tag.name %>
-</p>
-
+  <%=h @tag.name %><br>
 
 <%= link_to 'edit', edit_tag_path(@tag) %> |
 <%= link_to 'tags', tags_path %>
