--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,28 +1,8 @@
-<p>
-  <b>Body:</b>
-  <%=h @comment.body %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%=h @comment.user_id %>
-</p>
-
-<p>
-  <b>Reply:</b>
-  <%=h @comment.reply_id %>
-</p>
-
-<p>
-  <b>Target type:</b>
-  <%=h @comment.target_type %>
-</p>
-
-<p>
-  <b>Target:</b>
-  <%=h @comment.target_id %>
-</p>
-
+<%= link_to_name @comment.user %> said<br>
+<%=h @comment.body %><br>
+about  <%=h @comment.target_type.downcase %>  <%= link_to_name @comment.target %><br>
+<%= 'it was a reply to' + link_to_name @comment.reply if comment.reply %>
+  
 
 <%= link_to 'edit', edit_comment_path(@comment) %> |
 <%= link_to 'comments', comments_path %>
