--- a/app/views/followings/show.html.erb
+++ b/app/views/followings/show.html.erb
@@ -1,13 +1,4 @@
-<p>
-  <b>User:</b>
-  <%=h @following.user_id %>
-</p>
-
-<p>
-  <b>Follower:</b>
-  <%=h @following.follower_id %>
-</p>
-
+<%= link_to_name @following.follower %> is following <%= link_to_name @following.target %><br>
 
 <%= link_to 'edit', edit_following_path(@following) %> |
 <%= link_to 'followings', followings_path %>
