--- a/app/views/network_memberships/show.html.erb
+++ b/app/views/network_memberships/show.html.erb
@@ -1,13 +1,4 @@
-<p>
-  <b>User:</b>
-  <%=h @network_membership.user.name %>
-</p>
-
-<p>
-  <b>Network:</b>
-  <%=h @network_membership.network.name %>
-</p>
-
+  <%= link_to_name @network_membership.user %> has been a member of <%= link_to_name @network_membership.network %> since <%= time_ago_in_words @network_membership.created_at %><br>
 
 <%= link_to 'edit', edit_network_membership_path(@network_membership) %> |
 <%= link_to 'network_memberships', network_memberships_path %>
