--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,12 +1,9 @@
+<%=h @store.name %>  administered by <%= link_to_name, @store.administrator %><br>
+<%= image_tag @store.primary_image.public_filename  if @store.primary_image %><br>
 
-  <%=h @store.name %>
-  administered by <%= link_to @store.administrator.name, @store.administrator %>
-
-  <%=h @store.primary_image_id %>
-  
-  <% @store.locations.each do |l| %>
-    <%= link_to l.street + ' ' + l.city, l %>
-  <% end %>
+<% @store.locations.each do |l| %>
+  <%= link_to l.street + ' ' + l.city, l %><br>
+<% end %>
 
 <%= link_to 'edit', edit_store_path(@store) %> |
 <%= link_to 'stores', stores_path %>
