--- a/app/views/cities/new.html.erb
+++ b/app/views/cities/new.html.erb
@@ -9,10 +9,10 @@
   </p>
   <p>
     <%= f.label :state_id %><br />
-    <%= f.text_field :state_id %>
+    <%= f.select :state_id, State.map_name_and_id %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :identify %>
   </p>
 <% end %>
 
