--- a/app/views/image_uses/new.html.erb
+++ b/app/views/image_uses/new.html.erb
@@ -5,7 +5,7 @@
 
   <p>
     <%= f.label :image_id %><br />
-    <%= f.text_field :image_id %>
+    <%= f.select :image_id, Image.map_name_and_id('filename') %>
   </p>
   <p>
     <%= f.label :target_type %><br />
@@ -16,7 +16,7 @@
     <%= f.text_field :target_id %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :use %>
   </p>
 <% end %>
 
