--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,38 +1,14 @@
 <h1>New image</h1>
 
-<% form_for(@image) do |f| %>
+<% form_for(@image, :html => {:multipart => true}) do |f| %>
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :size %><br />
-    <%= f.text_field :size %>
+    <%= f.label :file %><br />
+    <%= f.file_field :uploaded_data %>
   </p>
   <p>
-    <%= f.label :content_type %><br />
-    <%= f.text_field :content_type %>
-  </p>
-  <p>
-    <%= f.label :filename %><br />
-    <%= f.text_field :filename %>
-  </p>
-  <p>
-    <%= f.label :height %><br />
-    <%= f.text_field :height %>
-  </p>
-  <p>
-    <%= f.label :width %><br />
-    <%= f.text_field :width %>
-  </p>
-  <p>
-    <%= f.label :parent_id %><br />
-    <%= f.text_field :parent_id %>
-  </p>
-  <p>
-    <%= f.label :thumbnail %><br />
-    <%= f.text_field :thumbnail %>
-  </p>
-  <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :woah! %>
   </p>
 <% end %>
 
