--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -5,30 +5,26 @@
 
   <p>
     <%= f.label :list_type %><br />
-    <%= f.text_field :list_type %>
+    <%= f.select :list_type, [['want', 1], ['have', 2], ['like', 3]] %>
   </p>
   <p>
     <%= f.label :product_id %><br />
-    <%= f.text_field :product_id %>
+    <%= f.select :product_id, Product.map_name_and_id %>
   </p>
   <p>
     <%= f.label :brand_id %><br />
-    <%= f.text_field :brand_id %>
+    <%= f.select :brand_id, Brand.map_name_and_id %>
   </p>
   <p>
     <%= f.label :store_id %><br />
-    <%= f.text_field :store_id %>
-  </p>
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
+    <%= f.select :store_id, Store.map_name_and_id %>
   </p>
   <p>
     <%= f.label :private %><br />
-    <%= f.text_field :private %>
+    <%= f.select :private, Group.map_name_and_id %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :'listen(enlist?)' %>
   </p>
 <% end %>
 
