--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -8,19 +8,15 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
+    <%= f.label :recipient_id %><br>
+    <%= f.select :recipient_id, User.map_name_and_id %>
   </p>
   <p>
     <%= f.label :reply_id %><br />
-    <%= f.text_field :reply_id %>
+    <%= f.select :reply_id, User.incoming_messages.map_name_and_id %>
   </p>
   <p>
-    <%= f.label :read_on %><br />
-    <%= f.datetime_select :read_on %>
-  </p>
-  <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :bestow %>
   </p>
 <% end %>
 
