--- a/app/views/network_memberships/new.html.erb
+++ b/app/views/network_memberships/new.html.erb
@@ -5,14 +5,14 @@
 
   <p>
     <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
+    <%= f.select :user_id, User.map_name_and_id %>
   </p>
   <p>
     <%= f.label :network_id %><br />
-    <%= f.text_field :network_id %>
+    <%= f.select :network_id, Network.map_name_and_id %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :money %>
   </p>
 <% end %>
 
