--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New product</h1>
+<h1>new product</h1>
 
 <% form_for(@product) do |f| %>
   <%= f.error_messages %>
@@ -9,10 +9,10 @@
   </p>
   <p>
     <%= f.label :brand_id %><br />
-    <%= f.text_field :brand_id %>
+    <%= f.select :brand_id, Brand.all.map { |b| [b.name, b.id] } %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :'ready for consumption' %>
   </p>
 <% end %>
 
