--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-<%= @user.login %>
+<%= @user.login %><br><br>
+<%= @user.listings.count %> items on lists<br>
+<%= @user.followers.count %> followers<br>
