--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -64,7 +64,7 @@
     <%= f.check_box :holidays %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit 'make available' %>
   </p>
 <% end %>
 
