--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -9,7 +9,7 @@
   </p>
   <p>
     <%= f.label :brand_id %><br />
-    <%= f.select :brand_id, Brand.all.map { |b| [b.name, b.id] } %>
+    <%= f.select :brand_id, Brand.map_name_and_id %>
   </p>
   <p>
     <%= f.submit :'ready for consumption' %>
