--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -9,11 +9,11 @@
   </p>
   <p>
     <%= f.label :administrator_id %><br />
-    <%= f.text_field :administrator_id %>
+    <%= f.select :administrator_id, User.map_name_and_id %>
   </p>
   <p>
     <%= f.label :primary_image_id %><br />
-    <%= f.text_field :primary_image_id %>
+    <%= f.select :primary_image_id, Image.map_name_and_id('filename') %>
   </p>
   <p>
     <%= f.submit "Create" %>
