--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -12,11 +12,7 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :link %>
   </p>
 <% end %>
 
