--- a/app/views/address_uses/new.html.erb
+++ b/app/views/address_uses/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :address_id, Address.map_name_and_id %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :envision %>
   </p>
 <% end %>
 
