--- a/app/views/image_uses/show.html.erb
+++ b/app/views/image_uses/show.html.erb
@@ -1,4 +1,4 @@
-  <%= link_to 'this image' @image_use.image %> is connected to 
+  <%= link_to 'this image', @image_use.image %> is connected to 
   <%=h @image_use.target_type %> 
   <%= link_to_name @image_use.target %><br>
 
