--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,4 @@
-  <%= img_tag @image.public_filename %>
+  <%= image_tag @image.public_filename %>
   <%=h @image.filename %>: 
   <%=h @image.height %>x
   <%=h @image.width %><br>
