--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
 <% @users.each do |u| %>
-  <%= link_to u.name, u %><br>
+  <%= link_to_name u %>
+  <%= link_to 'edit', edit_user_path(u) %><br>
 <% end %>
